# TyCamCode

./: CMakeLists.txt  main.cpp  tycamCapture.cpp  tycamCapture.h
